# KerSor-Monitor

./: .dockerignore  .gitignore  Dockerfile.api  README.md  config.env  docker-compose.yml  flotilla.db-shm  flotilla.db-wal  pyproject.toml  tasks-flashinfer-b200.yaml  tasks.yaml
config/: generic-workers.verda-fmha.example.yaml  local-monitor.yaml.example
dashboard/: package-lock.json  package.json  vite.config.ts
demo/: write_pytest_demo.py
docs/: ARCHITECTURE.md  FLOTILLA.md  USER-GUIDE.md  execution-flow.md  kersor-paper-experiment-implementation-plan.md  kersor-paper-experiment-plan.md  verda_fmha_iteration_workflow.md  worker-monitor-architecture.md  workspace-structure.md
flotilla/: actuator.py  app.py  config.py  db.py  models.py  observer.py  routes.py  scheduler.py  state.py  store.py  workspace.py
flows/: flashinfer-fmha-phase2c.yaml
local-monitor/: CLAUDE.md
monitor_policies/: active-safe.yaml
orchestrator/: CLAUDE.md
scripts/: autokaggle-v2.py  bench-all.py  bench.py  fetch_b200_leaderboard_snapshot.py  gen-dashboard-html.py  gen_phase1_prompts.py  generic_control.py  generic_remote_monitor.py  gpu-run.sh  init_workspace.py  install-autokaggle-control.py  kersor-arms.sh  kersor-promote-solution.sh  local-monitor.py  monitor_state.py  otel-env.sh  otel-plugin.py  otel_receiver.py  skill_hub.py  start-orchestrator.sh  start-worker.sh  update-dashboard.py  verify-infra.py
templates/: CLAUDE.md.tmpl  gitignore.tmpl  phase1-prompt.md.tmpl  phase2-prompt.md.tmpl  worker-prompt-kda3phase.md  worker-prompt-kersor.md  worker-prompt.md
(+68 files in other folders)
