[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flotilla"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "pydantic>=2.6,<3",
  "pytest>=8,<10",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=6,<8",
  "httpx2>=2,<3",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["flotilla*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.coverage.run]
branch = true
source = ["flotilla"]

[tool.coverage.report]
skip_covered = true
show_missing = true
